[gd_scene load_steps=3 format=2]

[ext_resource path="res://art/HUD assets/blood.png" type="Texture" id=1]
[ext_resource path="res://scripts/blood.gd" type="Script" id=2]

[node name="TextureRect" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alpha" type="Tween" parent="."]

[node name="alpha2" type="Tween" parent="."]
[connection signal="tween_completed" from="alpha" to="." method="_on_alpha_tween_completed"]
[connection signal="tween_completed" from="alpha2" to="." method="_on_alpha2_tween_completed"]
